--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <meta property='og:title' content='Movie Pedia' />
+    <meta property='og:image' content='./Screen Shot 2021-11-04 at 8.13.04 PM.png' />
+    <meta property='og:description' content='Web application to find more info about your favorite movies' />
+    <meta property='og:url' content='https://movies-pedia.herokuapp.com/' />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
